explicando git pro jonas

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <img src="" alt="">
             </div>
             <div class="view-project">
-                <div>
+                <div class="iframe-btns">
                     <iframe src="" frameborder="0">
 
                     </iframe>
@@ -135,8 +135,10 @@
                     </div>
                 </div>
                 <div class="content-project">
-                    <div class="project-description">
+                    <div class="project-sobre">
                         <h2 class="project-name"></h2>
+                        <p class="project-description"></p>
+                        <p class="used-project"></p>
                     </div>
                 </div>
 
@@ -149,15 +151,15 @@
                 </div>
 
                 <div class="choice">
-                    <div class="project-choice chosen" data-project="projects">
+                    <div class="project-choice chosen" data-choice="projects">
                         <i class="fa-solid fa-code"></i>
                         <h2>Projetos</h2>
                     </div>
-                    <div class="project-choice" data-project="certificates">
+                    <div class="project-choice" data-choice="certificates">
                         <i class="fa-solid fa-certificate"></i>
                         <h2>Certificações</h2>
                     </div>
-                    <div class="project-choice" data-project="abilities">
+                    <div class="project-choice" data-choice="abilities">
                         <i class="fa-solid fa-microchip"></i>
                         <h2>Habilidades</h2>
                     </div>
@@ -277,7 +279,7 @@
 
                 </div>
                 <div class="projects-items active-section">
-                    <div class="project-item item1 item">
+                    <div data-project="Destino dos Sonhos" class="project-item item1 item">
                         <div class="project-about">
                             <h4>Destino dos Sonhos</h4>
                             <div class="abilities-used">
@@ -287,7 +289,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-item item2 item">
+                    <div data-project="Weather App"  class="project-item item2 item">
                         <div class="project-about">
                             <h4>Weather App</h4>
                             <div class="abilities-used">
@@ -301,7 +303,7 @@
 
                     </div>
 
-                    <div class="project-item item3 item">
+                    <div data-project="CineMatch" class="project-item item3 item">
                         <div class="project-about">
                             <h4>CineMatch</h4>
                             <div class="abilities-used">
@@ -315,7 +317,7 @@
 
                     </div>
 
-                    <div class="project-item item4 item">
+                    <div data-project="Jogo da Memória" class="project-item item4 item">
                         <div class="project-about">
                             <h4>Jogo da Memória</h4>
                             <div class="abilities-used">
