--- a/index.html
+++ b/index.html
@@ -124,22 +124,24 @@
                 <img src="" alt="">
             </div>
             <div class="view-project">
-                <div class="iframe-btns">
-                    <iframe src="" frameborder="0">
+                <div class="content-project">
+                    <iframe class="video-projeto" src="" frameborder="2">
 
                     </iframe>
-                    <div class="btns">
-                        <a href=""><button class="btn-project">Acessar Projeto</button></a>
-                        <a href=""><button class="btn-project">Ver Repositório</button></a>
-                        <a href=""><button class="btn-project">Ver no Linkedin</button></a>
+                    <div class="info">
+                        <div class="project-sobre">
+                            <h2 class="project-name"></h2>
+                            <p class="project-description"></p>
+                            <p class="used-project"></p>
+                        </div>
                     </div>
                 </div>
-                <div class="content-project">
-                    <div class="project-sobre">
-                        <h2 class="project-name"></h2>
-                        <p class="project-description"></p>
-                        <p class="used-project"></p>
-                    </div>
+                <div class="btns">
+                    <a target="_blank" class="btn-project acessar-projeto" href="">Acessar
+                        Projeto</a>
+                    <a target="_blank" class="btn-project acessar-repositorio" href="">Ver
+                        Repositório</a>
+                    <a target="_blank" class="btn-project acessar-linkedin" href="">Ver no LinkedIn</a>
                 </div>
 
             </div>
@@ -289,7 +291,7 @@
                             </div>
                         </div>
                     </div>
-                    <div data-project="Weather App"  class="project-item item2 item">
+                    <div data-project="Weather App" class="project-item item2 item">
                         <div class="project-about">
                             <h4>Weather App</h4>
                             <div class="abilities-used">
