ajuste na responsividade

--- a/index.html
+++ b/index.html
@@ -168,31 +168,14 @@
                 </div>
 
                 <div class="certificates">
-                    <div class="certificate item">
-                        <div class="certificate-img">
-                            <img src="src/Certificates/certificate-html.png" alt="">
-                        </div>
+                    <div class="certificate item certificate1">
                         <div class="certificate-txt">
-                            <h3>Html5 - Curso em Vídeo - 40 Horas</h3>
-                            <p>
-                                I chose to enroll in this course after being introduced to HTML during my technical
-                                studies.
-                                Throughout the course, I was able to deepen and expand my understanding of HTML.
-                            </p>
+                            <h2>Html5 - Curso em Vídeo - 40 Horas</h2>
                         </div>
                     </div>
-                    <div class="certificate item">
-                        <div class="certificate-img">
-                            <img src="src/Certificates/certificate-logica.png" alt="">
-                        </div>
+                    <div class="certificate item certificate2">
                         <div class="certificate-txt">
-                            <h3>Fundamentos de Lógica de Programação - Fundação Bradesco - 15 Horas</h3>
-                            <p>
-                                Learning programming logic is essential, and it was in this course that I began to
-                                develop
-                                and
-                                refine my understanding of it.
-                            </p>
+                            <h2>Fundamentos de Lógica de Programação - Fundação Bradesco - 15 Horas</h2>
                         </div>
                     </div>
 
