mudança no texto de apresentação

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <p>Olá, meu nome é João Pedro, tenho 19 anos e atualmente estou cursando Desenvolvimento de
                         Sistemas. Já possuo experiência de trabalho na área como desenvolvedor, onde tive a oportunidade
                         de aplicar e aprimorar minhas habilidades em projetos reais. Possuo sólidos conhecimentos em
-                        HTML, CSS, JavaScript, bancos de dados, PHP e C# dentro do .NET Framework. Sou apaixonado por
+                        HTML, CSS, JavaScript, React, bancos de dados, PHP e C# dentro do .NET Framework. Sou apaixonado por
                         tecnologia e estou sempre ansioso para aprender e crescer profissionalmente. Atualmente, estou
                         em busca de novas oportunidades onde eu possa contribuir com uma equipe, desenvolver ainda mais
                         minhas habilidades e adquirir experiência valiosa na área.
