adição de projeto

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                     <p>Olá, meu nome é João Pedro, tenho 19 anos e atualmente estou cursando Desenvolvimento de
                         Sistemas. Já possuo experiência de trabalho na área como desenvolvedor, onde tive a oportunidade
                         de aplicar e aprimorar minhas habilidades em projetos reais. Possuo sólidos conhecimentos em
-                        HTML, CSS, JavaScript, React, bancos de dados, PHP e C# dentro do .NET Framework. Sou apaixonado por
+                        HTML, CSS, JavaScript, React, bancos de dados, PHP e C# dentro do .NET Framework. Sou apaixonado
+                        por
                         tecnologia e estou sempre ansioso para aprender e crescer profissionalmente. Atualmente, estou
                         em busca de novas oportunidades onde eu possa contribuir com uma equipe, desenvolver ainda mais
                         minhas habilidades e adquirir experiência valiosa na área.
@@ -307,6 +308,17 @@
                             <h4>Jogo da Memória</h4>
                             <div class="abilities-used">
                                 <img src="src/Abilities/c-sharp.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div data-project="Burgos House" class="project-item item5 item">
+                        <div class="project-about">
+                            <h4>Burgos House</h4>
+                            <div class="abilities-used">
+                                <img src="src/Abilities/html.png" alt="">
+                                <img src="src/Abilities/css-3.png" alt="">
+                                <img src="src/Abilities/js.png" alt="">
+                                <img src="src/Abilities/jquery.svg" alt="">
                             </div>
                         </div>
                     </div>
