adicionando projetos e certificados

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -142,7 +141,6 @@
                         Projeto</a>
                     <a target="_blank" class="btn-project acessar-repositorio" href="">Ver
                         Repositório</a>
-                    <a target="_blank" class="btn-project acessar-linkedin" href="">Ver no LinkedIn</a>
                 </div>
 
             </div>
@@ -179,7 +177,21 @@
                             <h2>Fundamentos de Lógica de Programação - Fundação Bradesco - 15 Horas</h2>
                         </div>
                     </div>
-
+                    <div class="certificate item certificate3">
+                        <div class="certificate-txt">
+                            <h2>React do Zero a Maestria (c/ hooks, router, API, Projetos) - 32 Horas</h2>
+                        </div>
+                    </div>
+                    <div class="certificate item certificate4">
+                        <div class="certificate-txt">
+                            <h2>Genexus - Grupo Assessor e Unisalesiano - 15 Horas</h2>
+                        </div>
+                    </div>
+                    <div class="certificate item certificate5">
+                        <div class="certificate-txt">
+                            <h2>Assistente de Desenvolvimento - 620 Horas</h2>
+                        </div>
+                    </div>
                 </div>
                 <div class="abilities">
                     <div class="abilities-icons">
@@ -195,6 +207,24 @@
                                 <h3>CSS</h3>
                             </div>
                         </a>
+                        <a href="https://sass-lang.com/" target="_blank">
+                            <div class="ability item">
+                                <img src="src/Abilities/sass.png" alt="">
+                                <h3>SASS</h3>
+                            </div>
+                        </a>
+                        <a href="https://getbootstrap.com/docs/" target="_blank">
+                            <div class="ability item">
+                                <img src="src/Abilities/bootstrap.png" alt="">
+                                <h3>Bootstrap</h3>
+                            </div>
+                        </a>
+                        <a href="https://tailwindcss.com/docs" target="_blank">
+                            <div class="ability item">
+                                <img src="src/Abilities/tailwind.png" alt="">
+                                <h3>Tailwind Css</h3>
+                            </div>
+                        </a>
                         <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank">
                             <div class="ability item">
                                 <img src="src/Abilities/js.png" alt="">
@@ -207,6 +237,12 @@
                                 <h3>JQuery</h3>
                             </div>
                         </a>
+                        <a href="https://nodejs.org/pt" target="_blank">
+                            <div class="ability item">
+                                <img src="src/Abilities/nodejs.png" alt="">
+                                <h3>NodeJS</h3>
+                            </div>
+                        </a>
                         <a href="https://react.dev/" target="_blank">
                             <div class="ability item">
                                 <img src="src/Abilities/react.png" alt="">
@@ -217,6 +253,12 @@
                             <div class="ability item">
                                 <img src="src/Abilities/vitejs.svg" alt="">
                                 <h3>Vite</h3>
+                            </div>
+                        </a>
+                        <a href="https://www.typescriptlang.org/" target="_blank">
+                            <div class="ability item">
+                                <img src="src/Abilities/typescript.png" alt="">
+                                <h3>Typescript</h3>
                             </div>
                         </a>
                         <a href="https://www.php.net/docs.php" target="_blank">
@@ -237,6 +279,18 @@
                                 <h3>MySql</h3>
                             </div>
                         </a>
+                        <a href="https://www.postgresql.org/" target="_blank">
+                            <div class="ability item">
+                                <img src="src/Abilities/postgreesql.png" alt="">
+                                <h3>Postgree SQL</h3>
+                            </div>
+                        </a>
+                        <a href="https://www.mongodb.com/" target="_blank">
+                            <div class="ability item">
+                                <img src="src/Abilities/mongodb.png" alt="">
+                                <h3>MongoDB</h3>
+                            </div>
+                        </a>
                         <a href="https://learn.microsoft.com/dotnet/csharp/" target="_blank">
                             <div class="ability item">
                                 <img src="src/Abilities/c-sharp.png" alt="">
@@ -247,18 +301,6 @@
                             <div class="ability item">
                                 <img src="src/Abilities/genexus.png" alt="">
                                 <h3>Genexus</h3>
-                            </div>
-                        </a>
-                        <a href="https://getbootstrap.com/docs/" target="_blank">
-                            <div class="ability item">
-                                <img src="src/Abilities/bootstrap.png" alt="">
-                                <h3>Bootstrap</h3>
-                            </div>
-                        </a>
-                        <a href="https://tailwindcss.com/docs" target="_blank">
-                            <div class="ability item">
-                                <img src="src/Abilities/tailwind.png" alt="">
-                                <h3>Tailwind Css</h3>
                             </div>
                         </a>
                     </div>
@@ -286,7 +328,6 @@
                                 <img src="src/Abilities/vitejs.svg" alt="">
                             </div>
                         </div>
-
                     </div>
 
                     <div data-project="CineMatch" class="project-item item3 item">
@@ -300,9 +341,9 @@
                                 <img src="src/Abilities/vitejs.svg" alt="">
                             </div>
                         </div>
-
+                        
                     </div>
-
+                    
                     <div data-project="Jogo da Memória" class="project-item item4 item">
                         <div class="project-about">
                             <h4>Jogo da Memória</h4>
@@ -319,6 +360,42 @@
                                 <img src="src/Abilities/css-3.png" alt="">
                                 <img src="src/Abilities/js.png" alt="">
                                 <img src="src/Abilities/jquery.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div data-project="Movies Lib" class="project-item item6 item">
+                        <div class="project-about">
+                            <h4>Movies Lib</h4>
+                            <div class="abilities-used">
+                                <img src="src/Abilities/html.png" alt="">
+                                <img src="src/Abilities/css-3.png" alt="">
+                                <img src="src/Abilities/js.png" alt="">
+                                <img src="src/Abilities/react.png" alt="">
+                                <img src="src/Abilities/vitejs.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div data-project="To Do" class="project-item item7 item">
+                        <div class="project-about">
+                            <h4>To-Do</h4>
+                            <div class="abilities-used">
+                                <img src="src/Abilities/html.png" alt="">
+                                <img src="src/Abilities/css-3.png" alt="">
+                                <img src="src/Abilities/typescript.png" alt="">
+                                <img src="src/Abilities/react.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div data-project="ReactGram" class="project-item item8 item">
+                        <div class="project-about">
+                            <h4>ReactGram</h4>
+                            <div class="abilities-used">
+                                <img src="src/Abilities/html.png" alt="">
+                                <img src="src/Abilities/css-3.png" alt="">
+                                <img src="src/Abilities/js.png" alt="">
+                                <img src="src/Abilities/react.png" alt="">
+                                <img src="src/Abilities/nodejs.png" alt="">
+                                <img src="src/Abilities/mongodb.png" alt="">
                             </div>
                         </div>
                     </div>
