adição de certificado

--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
                             <h2>Assistente de Desenvolvimento - 620 Horas</h2>
                         </div>
                     </div>
+                    <div class="certificate item certificate6">
+                        <div class="certificate-txt">
+                            <h2>Javascript - Curso em Vídeo - 40 Horas</h2>
+                        </div>
+                    </div>
                 </div>
                 <div class="abilities">
                     <div class="abilities-icons">
