adição de projeto e habilidades

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -197,6 +198,11 @@
                             <h2>Javascript - Curso em Vídeo - 40 Horas</h2>
                         </div>
                     </div>
+                    <div class="certificate item certificate7">
+                        <div class="certificate-txt">
+                            <h2>Angular 19 - Curso Completo do Iniciante ao Avançado (2025) - 15 Horas</h2>
+                        </div>
+                    </div>
                 </div>
                 <div class="abilities">
                     <div class="abilities-icons">
@@ -254,6 +260,12 @@
                                 <h3>React</h3>
                             </div>
                         </a>
+                        <a href="https://angular.dev/" target="_blank">
+                            <div class="ability item">
+                                <img src="src/Abilities/angular.png" alt="">
+                                <h3>Angular</h3>
+                            </div>
+                        </a>
                         <a href="https://vite.dev/guide/" target="_blank">
                             <div class="ability item">
                                 <img src="src/Abilities/vitejs.svg" alt="">
@@ -296,6 +308,12 @@
                                 <h3>MongoDB</h3>
                             </div>
                         </a>
+                        <a href="https://firebase.google.com/" target="_blank">
+                            <div class="ability item">
+                                <img src="src/Abilities/firebase.png" alt="">
+                                <h3>Firebase</h3>
+                            </div>
+                        </a>
                         <a href="https://learn.microsoft.com/dotnet/csharp/" target="_blank">
                             <div class="ability item">
                                 <img src="src/Abilities/c-sharp.png" alt="">
@@ -336,9 +354,9 @@
                                 <img src="src/Abilities/vitejs.svg" alt="">
                             </div>
                         </div>
-                        
+
                     </div>
-                    
+
                     <div data-project="Jogo da Memória" class="project-item item4 item">
                         <div class="project-about">
                             <h4>Jogo da Memória</h4>
@@ -391,6 +409,16 @@
                                 <img src="src/Abilities/react.png" alt="">
                                 <img src="src/Abilities/nodejs.png" alt="">
                                 <img src="src/Abilities/mongodb.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div data-project="Passeio_App" class="project-item item9 item">
+                        <div class="project-about">
+                            <h4>Passeio App</h4>
+                            <div class="abilities-used">
+                                <img src="src/Abilities/angular.png" alt="">
+                                <img src="src/Abilities/tailwind.png" alt="">
+                                <img src="src/Abilities/typescript.png" alt="">
                             </div>
                         </div>
                     </div>
