--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="buttons">
-                    <a href="src/joaopedroCurriculo.pdf" download="joao-pedro-curriculo.pdf">Download CV <i
+                    <a href="src/Curriculo-joaopedro.pdf" download="joao-pedro-curriculo.pdf">Download CV <i
                             class="fa-solid fa-download"></i></a>
                     <a href="#projects">Projetos <i class="fa-solid fa-arrow-down"></i></a>
                 </div>
